# audio-captur

./: README.md  package.json
.github/workflows/: build.yml
native/: README.md
native/macos/CaptureHelper/: Package.swift
native/macos/CaptureHelper/Sources/: main.swift
native/windows/capture-helper/: Cargo.toml
native/windows/capture-helper/src/: main.rs
src/main/: helpers.js  main.js  preload.js  recorder.js
src/renderer/: index.html  renderer.js  styles.css
